--- a/index.html
+++ b/index.html
@@ -6,49 +6,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DnCELL</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
     <!--Barra de Navegação-->
     <header>
-        <nav class="navbar navbar-dark bg-dark">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="index.html">DnCELL</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+      <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"
+          style="vertical-align: inherit;"
+          style="vertical-align: inherit;">DnCELL
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Alternar de navegação">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#"
+                style="vertical-align: inherit;"
+                style="vertical-align: inherit;">Inicio
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"
+                style="vertical-align: inherit;"
+                style="vertical-align: inherit;">Contato
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"
+                style="vertical-align: inherit;"
+                style="vertical-align: inherit;">Apple
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"
+                style="vertical-align: inherit;"
+                style="vertical-align: inherit;">Samsung
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled"
+                style="vertical-align: inherit;"
+                style="vertical-align: inherit;">Login
+                </a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Procurar" aria-label="Procurar">
+              <button class="btn btn-outline-success" type="submit"
+              style="vertical-align: inherit;"
+              style="vertical-align: inherit;">Procurar
               </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Contato.html">Contato</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Modelos
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Apple</a></li>
-                      <li><a class="dropdown-item" href="#">Samsung</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Todos</a></li>
-                    </ul>
-                  </li>
-                </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Pesquisar aparelho" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Pesquisar</button>
-                </form>
-              </div>
-            </div>
-        </nav>
+            </form>
+          </div>
+        </div>
+      </nav>
     </header>
     <!--Barra de Navegação-->
 
     <main>
-        <!--
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -59,22 +78,25 @@
               <div class="carousel-item active">
                 <img src="assets/images/foto-celular1.webp" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                  <h2>Compre dispositivos ou troque telefones,
+                    tablets e muito mais Obtenha mais.</h2>
+                  <p>Encontre mais</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="assets/images/foto-celular2.webp" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
+                  <h2>Compre dispositivos ou troque telefones,
+                    tablets e muito mais Obtenha mais.</h2>
+                  <p>Encontre mais</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="assets/images/foto-celular3.webp" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                  <h2>Compre dispositivos ou troque telefones,
+                    tablets e muito mais Obtenha mais.</h2>
+                  <p>Encontre mais</p>
                 </div>
               </div>
             </div>
@@ -87,7 +109,27 @@
               <span class="visually-hidden">Next</span>
             </button>
         </div>
+
+        <img src="assets/images/celulares.jpg" class="img-fluid">
+
+        <div class="texto-feedback"><h1>O que os clientes estão dizendo sobre nós</h1></div>
+        <div>
+
+        <div class="card" style="width: 18rem;">
+        
+          <div class="card-body">
+            <h3 class="card-title"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">SIMPLE</font></font></h3>
+            <p class="card-text"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Quanto mais fácil, melhor, dizemos. Veja quanto vale o seu dispositivo e envie-o gratuitamente.</font></font></p>
+          </div>
+
+          <iframe width="287" height="200" src="https://www.youtube.com/embed/PDwHPYMHXWM?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+          </div>
+
+        
+
     </main>
--->
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
